Fixed the oldschool and classic client URLs for 2015. VestaClient lives! Also saving the jars to the local folder for quick launches.